--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <title>Keeper App</title>
-    <link font-family: "Montserrat", sans-serif;
-    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx"></script>
+    <script src="index.js" type="text/jsx"></script>
   </body>
 </html>
